--- a/app/views/portfolios/calculate.html.erb
+++ b/app/views/portfolios/calculate.html.erb
@@ -1,3 +1,11 @@
+<style> 
+
+  .yAxis path {
+    stroke: #B8B8B8;
+  }  
+  
+</style>
+
 <h3>Simulation: <%= @the_portfolio.name %> </h3>
 <div>
   <div>
@@ -14,7 +22,7 @@
 <script src="https://d3js.org/d3.v4.js"></script>
 
 <!-- Create a div where the graph will take place -->
-<div class = "left col-5" id="my_dataviz"></div>
+<div class = "left col-6" id="my_dataviz"></div>
 <script>
 
 // set the dimensions and margins of the graph
@@ -126,16 +134,69 @@ var data = <%=  JSON.parse(@python_simulation.fetch("returns_year1").to_json) %>
     .attr("y", y(10))
     .text("Average: " + <%=  (((@python_simulation.fetch("returns_year1")).sum/(@python_simulation.fetch("returns_year1")).count).to_f*100).round(2) %> +"%")
     .style("font-size", "15px")
+    .style("fill", "white")
 
 ;
 </script>
 
-<div class = "right col-7">
+
+
+<div class = "right col-6">
+
+<canvas id="myChart" width="200" height="200"></canvas>
+<script>
+var ctx = document.getElementById('myChart').getContext('2d');
+var myBubbleChart = new Chart(ctx, {
+    type: 'bubble',
+    data: {
+        datasets: [{
+            label: 'Return vs. CVAR (5%)',
+            data: [{
+                    type: 'bubble',
+                    x: <%= -1*(@python_simulation.fetch("CVAR_year1")*100).round(1) %>,
+                    y: <%= (((@python_simulation.fetch("dollar_50th")[0])/1000000)*100 -100).round(1) %>,
+                    r: 15
+                }, {
+                    x: <%= -1*(@python_simulation.fetch("bench_CVAR")[0]*100).round(1) %>,
+                    y: <%= (((@python_simulation.fetch("bench_dollar_50th")[0])/1000000)*100 -100).round(1) %>,
+                    r: 15
+                }],
+            
+            backgroundColor: [
+                            '#5445FF',
+                            '#ABADBF'
+                      ]
+            }]          
+    },
+    options: {
+        scales: {
+            xAxes: [{
+                  ticks: {
+                    min: <%= [-1*(@python_simulation.fetch("bench_CVAR")[0]*100).round(0) - 1,  -1*(@python_simulation.fetch("CVAR_year1")*100).round(0)  - 1 ].min %>,
+                    max: <%= [-1*(@python_simulation.fetch("bench_CVAR")[0]*100).round(0) + 1,  -1*(@python_simulation.fetch("CVAR_year1")*100).round(0)  + 1 ].max %>
+                }
+            }],
+            yAxes: [{
+                  ticks: {
+                    min: <%= [ (((@python_simulation.fetch("bench_dollar_50th")[0])/1000000)*100 -100).round(0)  - 1, (((@python_simulation.fetch("dollar_50th")[0])/1000000)*100 -100).round(0)  - 1].min %>,
+                    max: <%= [ (((@python_simulation.fetch("bench_dollar_50th")[0])/1000000)*100 -100).round(0) + 1, (((@python_simulation.fetch("dollar_50th")[0])/1000000)*100 -100).round(0) + 1].max %>
+                }
+            }]
+            
+
+        }
+        
+    }
+});
+</script>
+</div>
+
+<div class = "right col-12">
 <h4>Summary Table</h4>
 
 <table class="table table-hover">
-  <tr class="table-info">
-    <th> </th>
+  <tr class="table" style ="background-color:#5445FF">
+    <th>Portfolio </th>
     <th>Year 1</th>
     <th>Year 2</th>
     <th>Year 3</th>
@@ -146,19 +207,6 @@ var data = <%=  JSON.parse(@python_simulation.fetch("returns_year1").to_json) %>
     <th>Year 8</th>
     <th>Year 9</th>
     <th>Year 10</th>
-  </tr>
-  <tr>
-    <td>Growth of $1M </td>
-    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[0], precision: 0)  %> </td>
-    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[1], precision: 0)  %> </td>
-    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[2], precision: 0)  %> </td>
-    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[3], precision: 0)  %> </td>
-    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[4], precision: 0)  %> </td>
-    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[5], precision: 0)  %> </td>
-    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[6], precision: 0)  %> </td>
-    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[7], precision: 0)  %> </td>
-    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[8], precision: 0)  %> </td>
-    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[9], precision: 0)  %> </td>
   </tr>
 
   <tr>
@@ -226,7 +274,19 @@ var data = <%=  JSON.parse(@python_simulation.fetch("returns_year1").to_json) %>
     <td> <%= number_to_currency(@python_simulation.fetch("dollar_10th")[7], precision: 0)  %> </td>
     <td> <%= number_to_currency(@python_simulation.fetch("dollar_10th")[8], precision: 0)  %> </td>
     <td> <%= number_to_currency(@python_simulation.fetch("dollar_10th")[9], precision: 0)  %> </td>
-
+  </tr>
+  <tr>
+    <td>Growth of $1M (50th Percentile) </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[0], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[1], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[2], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[3], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[4], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[5], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[6], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[7], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[8], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("dollar_50th")[9], precision: 0)  %> </td>
   </tr>
   <tr>
     <td>Growth of $1M (90th Percentile) </td>
@@ -241,6 +301,132 @@ var data = <%=  JSON.parse(@python_simulation.fetch("returns_year1").to_json) %>
     <td> <%= number_to_currency(@python_simulation.fetch("dollar_90th")[8], precision: 0)  %> </td>
     <td> <%= number_to_currency(@python_simulation.fetch("dollar_90th")[9], precision: 0)  %> </td>
 
+  </tr>
+
+   <tr class="table" style ="background-color:#5445FF">
+    <th>Benchmark </th>
+    <th>Year 1</th>
+    <th>Year 2</th>
+    <th>Year 3</th>
+    <th>Year 4</th>
+    <th>Year 5</th>
+    <th>Year 6</th>
+    <th>Year 7</th>
+    <th>Year 8</th>
+    <th>Year 9</th>
+    <th>Year 10</th>
+  </tr>
+
+  <tr>
+    <td>Average Cumulative Return </td>
+    <td> <%= (((@python_simulation.fetch("bench_dollar_50th")[0])/1000000)*100 -100).round(1)%>% </td>
+    <td> <%= (((@python_simulation.fetch("bench_dollar_50th")[1])/1000000)*100 -100).round(1)%>% </td>
+    <td> <%= (((@python_simulation.fetch("bench_dollar_50th")[2])/1000000)*100 -100).round(1)%>% </td>
+    <td> <%= (((@python_simulation.fetch("bench_dollar_50th")[3])/1000000)*100 -100).round(1)%>% </td>
+    <td> <%= (((@python_simulation.fetch("bench_dollar_50th")[4])/1000000)*100 -100).round(1)%>% </td>
+    <td> <%= (((@python_simulation.fetch("bench_dollar_50th")[5])/1000000)*100 -100).round(1)%>% </td>
+    <td> <%= (((@python_simulation.fetch("bench_dollar_50th")[6])/1000000)*100 -100).round(1)%>% </td>
+    <td> <%= (((@python_simulation.fetch("bench_dollar_50th")[7])/1000000)*100 -100).round(1)%>% </td>
+    <td> <%= (((@python_simulation.fetch("bench_dollar_50th")[8])/1000000)*100 -100).round(1)%>% </td>
+    <td> <%= (((@python_simulation.fetch("bench_dollar_50th")[9])/1000000)*100 -100).round(1)%>% </td>
+  </tr>
+
+  <tr>
+    <td>Average CVAR (5%%) </td>
+    <td> <%= (@python_simulation.fetch("bench_CVAR")[0]*100).round(1) %>% </td>
+    <td> <%= (@python_simulation.fetch("bench_CVAR")[1]*100).round(1) %>% </td>
+    <td> <%= (@python_simulation.fetch("bench_CVAR")[2]*100).round(1) %>% </td>
+    <td> <%= (@python_simulation.fetch("bench_CVAR")[3]*100).round(1) %>% </td>
+    <td> <%= (@python_simulation.fetch("bench_CVAR")[4]*100).round(1) %>% </td>
+    <td> <%= (@python_simulation.fetch("bench_CVAR")[5]*100).round(1) %>% </td>
+    <td> <%= (@python_simulation.fetch("bench_CVAR")[6]*100).round(1) %>% </td>
+    <td> <%= (@python_simulation.fetch("bench_CVAR")[7]*100).round(1) %>% </td>
+    <td> <%= (@python_simulation.fetch("bench_CVAR")[8]*100).round(1) %>% </td>
+    <td> <%= (@python_simulation.fetch("bench_CVAR")[9]*100).round(1) %>% </td>
+    
+  </tr>
+  <tr>
+    <td>Probabilty of Success </td>
+    <td> <%= (@python_simulation.fetch("bench_probability")[0]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_probability")[1]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_probability")[2]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_probability")[3]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_probability")[4]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_probability")[5]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_probability")[6]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_probability")[7]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_probability")[8]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_probability")[9]*100).round(1)%>% </td>
+   
+  </tr>
+  <tr>
+    <td>Yield</td>
+    <td> <%= (@python_simulation.fetch("bench_yield")*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_yield")*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_yield")*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_yield")*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_yield")*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_yield")*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_yield")*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_yield")*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_yield")*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("bench_yield")*100).round(1)%>% </td>
+  </tr>
+  <tr>
+    <td>Growth of $1M (10th Percentile) </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_10th")[0], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_10th")[1], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_10th")[2], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_10th")[3], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_10th")[4], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_10th")[5], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_10th")[6], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_10th")[7], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_10th")[8], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_10th")[9], precision: 0)  %> </td>
+
+  </tr>
+  <tr>
+    <td>Growth of $1M (50th Percentile)</td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_50th")[0], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_50th")[1], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_50th")[2], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_50th")[3], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_50th")[4], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_50th")[5], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_50th")[6], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_50th")[7], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_50th")[8], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_50th")[9], precision: 0)  %> </td>
+  </tr>
+
+  <tr>
+    <td>Growth of $1M (90th Percentile) </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_90th")[0], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_90th")[1], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_90th")[2], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_90th")[3], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_90th")[4], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_90th")[5], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_90th")[6], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_90th")[7], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_90th")[8], precision: 0)  %> </td>
+    <td> <%= number_to_currency(@python_simulation.fetch("bench_dollar_90th")[9], precision: 0)  %> </td>
+
+  </tr>
+  <tr>
+    <td>Probabilty of Success (Portfolio vs. Benchmark) </td>
+    <td> <%= (@python_simulation.fetch("port_bench_probability")[0]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("port_bench_probability")[1]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("port_bench_probability")[2]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("port_bench_probability")[3]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("port_bench_probability")[4]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("port_bench_probability")[5]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("port_bench_probability")[6]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("port_bench_probability")[7]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("port_bench_probability")[8]*100).round(1)%>% </td>
+    <td> <%= (@python_simulation.fetch("port_bench_probability")[9]*100).round(1)%>% </td>
+   
   </tr>
 
 </table>  
@@ -310,5 +496,125 @@ var data = <%=  JSON.parse(@python_simulation.fetch("dollar_50th").to_json) %>;
         )
 
 )
+
+</script>
+<div class = "right col-6" id="my_dataviz2"></div>
+
+
+<script>
+
+// set the dimensions and margins of the graph
+var margin = {top: 7, right: 10, bottom: 90, left: 50},
+    width = 700 - margin.left - margin.right,
+    height = 750 - margin.top - margin.bottom;
+
+// append the svg object to the body of the page
+var Svg = d3.select("#my_dataviz2")
+  .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform",
+          "translate(" + margin.left + "," + margin.top + ")")
+
+
+
+//Read the data
+// get the data
+var data = <%= [ [(((@python_simulation.fetch("dollar_50th")[0])/1000000)*100 -100).round(1), -1*(@python_simulation.fetch("CVAR_year1")*100).round(1) ],
+                 [(((@python_simulation.fetch("bench_dollar_50th")[0])/1000000)*100 -100).round(1), -1*(@python_simulation.fetch("bench_CVAR")[0]*100).round(1) ]]  %>;
+
+
+  // Add X axis
+  var x = d3.scaleLinear()
+    .domain([<%= [-1*(@python_simulation.fetch("CVAR_year1")*100).round(0),-1*(@python_simulation.fetch("bench_CVAR")[0]*100).round(0) ].min - 1%>, <%= 1 + [-1*(@python_simulation.fetch("CVAR_year1")*100).round(0),-1*(@python_simulation.fetch("bench_CVAR")[0]*100).round(0) ].max %> ])
+    .range([ 0, width ])
+  Svg.append("g")
+    .attr("transform", "translate(0," + height + ")")
+    .call(d3.axisBottom(x).tickSize(-height*1.3).ticks(10))
+    .selectAll("text")
+      .style("font-size", 15)
+      .style("fill", "#FFFFFF")
+    .select(".domain").remove()
+
+  
+  // Add Y axis
+  var y = d3.scaleLinear()
+    .domain([<%= [(((@python_simulation.fetch("dollar_50th")[0])/1000000)*100 -100).round(0),(((@python_simulation.fetch("bench_dollar_50th")[0])/1000000)*100 -100).round(0) ].min - 1%>, <%= 1 + [(((@python_simulation.fetch("dollar_50th")[0])/1000000)*100 -100).round(0),(((@python_simulation.fetch("bench_dollar_50th")[0])/1000000)*100 -100).round(0) ].max %> ])
+    .range([ height, 0])
+    .nice()
+  Svg.append("g")
+    .call(d3.axisLeft(y).tickSize(-width*1.3).ticks(10))
+    .selectAll("text")
+      .style("font-size", 15)
+      .style("fill", "#FFFFFF")
+    .select(".domain").remove()
+        
+    
+
+  // Customization
+  Svg.selectAll(".tick line").attr("stroke", "#EBEBEB")
+
+  // Add X axis label:
+  Svg.append("text")
+      .attr("text-anchor", "end")
+      .attr("x", width)
+      .attr("y", height + margin.top + 20)
+      .text("CVAR (5%)")
+      .style("fill", "white");
+
+  // Y axis label:
+  Svg.append("text")
+      .attr("text-anchor", "end")
+      .attr("transform", "rotate(-90)")
+      .attr("y", -margin.left+20)
+      .attr("x", -margin.top)
+      .text("Return")
+      .style("fill", "white");
+
+  // Color scale: give me a specie name, I return a color
+  var color = d3.scaleOrdinal()
+    .range([ "#5445FF", "#ABADBF"])
+
+  // Add dots
+  Svg.append('g')
+    .selectAll("dot")
+    .data(data)
+    .enter()
+    .append("circle")
+      .attr("cx", function (d) { return x(d[1]); })
+      .attr("cy", function (d) { return y(d[0]); } )
+      .attr("r", 10)
+      .style("fill", function (d) { return color(d) } );
+
+  // Add Legend
+  Svg.append('g')
+    .append("circle")
+      .attr("cx",550)
+      .attr("cy",700)
+      .attr("r", 6)
+      .style("fill", "#5445FF")
+  Svg.append('g')
+    .append("circle")
+      .attr("cx",550)
+      .attr("cy",720)
+      .attr("r", 6)
+      .style("fill", "#ABADBF")
+  Svg.append('g')
+    .append("text")
+      .attr("x",570)
+      .attr("y",705)
+      .text("Portfolio")
+      .style("font-size", "15px")
+      .style("fill", "#5445FF")
+  Svg.append('g')
+    .append("text")
+      .attr("x",570)
+      .attr("y",725)
+      .text("Benchmark")
+      .style("font-size", "15px")
+      .style("fill", "#ABADBF")
+    
+
 
 </script>
