--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -79,10 +79,10 @@
         <th>Weight</th>
         <th hidden >ID</th>
         <th style ="background-color:#5445FF; border-bottom: 1px solid #39394B"> </th>
-        <th>Exp Ret</th>
-        <th>Std Dev</th>
-        <th>Skew</th>
-        <th>Kurt</th>
+        <th>Expected Return</th>
+        <th>Standard Deviation</th>
+        <th>Skewness</th>
+        <th>Kurtosis</th>
         <th>Yield</th>
         <th hidden >ID</th>
       </tr>
@@ -111,10 +111,10 @@
         <th>Benchmark </th>
         <th>Weight</th>
         <td> </td>
-        <th>Exp Ret</th>
-        <th>Std Dev</th>
-        <th>Skew</th>
-        <th>Kurt</th>
+        <th>Expected Return</th>
+        <th>Standard Deviation</th>
+        <th>Skewness</th>
+        <th>Kurtosis</th>
         <th>Yield</th>
        
       </tr>
