--- a/app/views/forecasts/calculate.html.erb
+++ b/app/views/forecasts/calculate.html.erb
@@ -1,1 +1,178 @@
-<%= @python_forecat_port2.fetch("port1_dollar30")%>
+<h3>Simulation: <%= @the_forecast.name %> </h3>
+<div>
+  <div>
+     <div><a href="/forecasts/<%=@the_forecast.id%>">Go back</a></div>
+
+  </div>
+</div>
+
+
+<hr>
+
+
+<div>Portfolio 1: $<%= (@python_forecat_port1.fetch("port_dollar30").sum/30000).round(0)%> </div>
+
+<div>Portfolio 2: $<%= (@python_forecat_port2.fetch("port_dollar30").sum/30000).round(0)%> </div>
+
+<div class = "row">
+<div class = "left col-12">
+<canvas id="myLineChart" width="100" height="50"></canvas>
+<script>
+var ctx = document.getElementById('myLineChart').getContext('2d');
+
+var dataFirst_sim10th = {
+  label: "Portfolio 1",
+  data: <%= @python_forecat_port1.fetch("sim_paths").sort_by(&:last)[3000] %>, 
+  pointBackgroundColor: "#5445FF",
+  borderColor: "#5445FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+
+var dataFirst_sim50th = {
+  // label: "Portfolio 1",
+  data: <%= @python_forecat_port1.fetch("sim_paths").sort_by(&:last)[15000] %>, 
+  pointBackgroundColor: "#5445FF",
+  borderColor: "#5445FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+var dataFirst_sim90th = {
+  // label: "Portfolio 1",
+  data: <%= @python_forecat_port1.fetch("sim_paths").sort_by(&:last)[27000] %>, 
+  pointBackgroundColor: "#5445FF",
+  borderColor: "#5445FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+
+var dataSecond_sim10th = {
+  label: "Portfolio 1",
+  data: <%= @python_forecat_port2.fetch("sim_paths").sort_by(&:last)[3000] %>, 
+  pointBackgroundColor: "#71B8FF",
+  borderColor: "#71B8FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+
+var dataSecond_sim50th = {
+  // label: "Portfolio 1",
+  data: <%= @python_forecat_port2.fetch("sim_paths").sort_by(&:last)[15000] %>, 
+  pointBackgroundColor: "#71B8FF",
+  borderColor: "#71B8FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+var dataSecond_sim90th = {
+  // label: "Portfolio 1",
+  data: <%= @python_forecat_port2.fetch("sim_paths").sort_by(&:last)[27000] %>, 
+  pointBackgroundColor: "#71B8FF",
+  borderColor: "#71B8FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+  
+var lineData = {
+  labels: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30"],
+  datasets: [dataFirst_sim10th, dataFirst_sim50th, dataFirst_sim90th, dataSecond_sim10th, dataSecond_sim50th, dataSecond_sim90th]
+};
+
+var myLineChart = new Chart(ctx, {
+    type: 'line',
+    data: lineData
+});
+</script>
+</div>
+</div>
+
+<div class = "row">
+<div class = "left col-6">
+<canvas id="myLineChart1" width="100" height="50"></canvas>
+<script>
+var ctx = document.getElementById('myLineChart1').getContext('2d');
+
+var dataFirst_sim10th = {
+  label: "Portfolio 1",
+  data: <%= @python_forecat_port1.fetch("sim_paths").sort_by(&:last)[3000] %>, 
+  pointBackgroundColor: "#5445FF",
+  borderColor: "#5445FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+
+var dataFirst_sim50th = {
+  // label: "Portfolio 1",
+  data: <%= @python_forecat_port1.fetch("sim_paths").sort_by(&:last)[15000] %>, 
+  pointBackgroundColor: "#5445FF",
+  borderColor: "#5445FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+var dataFirst_sim90th = {
+  // label: "Portfolio 1",
+  data: <%= @python_forecat_port1.fetch("sim_paths").sort_by(&:last)[27000] %>, 
+  pointBackgroundColor: "#5445FF",
+  borderColor: "#5445FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+
+  
+var lineData = {
+  labels: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30"],
+  datasets: [dataFirst_sim10th, dataFirst_sim50th, dataFirst_sim90th]
+};
+
+var myLineChart1 = new Chart(ctx, {
+    type: 'line',
+    data: lineData
+});
+</script>
+</div>
+
+<div class = "right col-6">
+
+<canvas id="myLineChart2" width="100" height="50"></canvas>
+<script>
+var ctx = document.getElementById('myLineChart2').getContext('2d');
+
+var dataFirst_sim10th = {
+  label: "Portfolio 1",
+  data: <%= @python_forecat_port2.fetch("sim_paths").sort_by(&:last)[3000] %>, 
+  pointBackgroundColor: "#71B8FF",
+  borderColor: "#71B8FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+
+var dataFirst_sim50th = {
+  // label: "Portfolio 1",
+  data: <%= @python_forecat_port2.fetch("sim_paths").sort_by(&:last)[15000] %>, 
+  pointBackgroundColor: "#71B8FF",
+  borderColor: "#71B8FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+var dataFirst_sim90th = {
+  // label: "Portfolio 1",
+  data: <%= @python_forecat_port2.fetch("sim_paths").sort_by(&:last)[27000] %>, 
+  pointBackgroundColor: "#71B8FF",
+  borderColor: "#71B8FF",
+  lineTension: 0.3,
+  // Set More Options
+};
+
+  
+var lineData = {
+  labels: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30"],
+  datasets: [dataFirst_sim10th, dataFirst_sim50th, dataFirst_sim90th]
+};
+
+var myLineChart2 = new Chart(ctx, {
+    type: 'line',
+    data: lineData
+});
+</script>
+</div>
+</div>
+</div>
