--- a/app/views/forecasts/calculate.html.erb
+++ b/app/views/forecasts/calculate.html.erb
@@ -71,9 +71,11 @@ var dataSecond_sim90th = {
   lineTension: 0.3,
   // Set More Options
 };
+
+
   
 var lineData = {
-  labels: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30"],
+  labels: ["0","1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30"],
   datasets: [dataFirst_sim10th, dataFirst_sim50th, dataFirst_sim90th, dataSecond_sim10th, dataSecond_sim50th, dataSecond_sim90th]
 };
 
@@ -119,7 +121,7 @@ var dataFirst_sim90th = {
 
   
 var lineData = {
-  labels: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30"],
+  labels: ["0","1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30"],
   datasets: [dataFirst_sim10th, dataFirst_sim50th, dataFirst_sim90th]
 };
 
@@ -164,7 +166,7 @@ var dataFirst_sim90th = {
 
   
 var lineData = {
-  labels: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30"],
+  labels: ["0","1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30"],
   datasets: [dataFirst_sim10th, dataFirst_sim50th, dataFirst_sim90th]
 };
 
